APIC / fixmap changes. Phil, this is slightly different from the one I sent you. I've module-loads-tested it on :
2.4.17UP - UP h/w

2.4.5UP - SMP h/w
2.4.5UP+CONFIG_X86_LOCAL_APIC - SMP h/w
2.4.5SMP - SMP h/w
2.2.16SMP - SMP h/w
2.2.16UP - SMP h/w

Everything looks OK to me !

--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.13 2002/01/21 02:47:27 phil_e Exp $
+# $Id: Makefile.in,v 1.14 2002/01/22 20:36:09 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -28,7 +28,7 @@ uninstall:
 clean:
 	rm -rf *.o .deps
 
-oprofile.o: op_init.o op_util.o oprofile_c.o op_nmi.o op_rtc.o oprofile_nmi22.o oprofile_nmi24.o op_syscalls.o op_events_module.o op_x86.o compat.o
+oprofile.o: op_init.o op_util.o oprofile_c.o op_nmi.o op_rtc.o oprofile_nmi22.o oprofile_nmi24.o op_syscalls.o op_events_module.o op_apic.o op_fixmap.o compat.o
 	$(LD) -r -o $@ $^
 
 # we can't use implicit rules for this directory
@@ -49,7 +49,10 @@ op_rtc.o: op_rtc.c
 oprofile_c.o: oprofile.c oprofile.h ../op_user.h compat.h compat22.h compat24.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
-op_x86.o: op_x86.c
+op_apic.o: op_apic.c
+	$(CC) $(KCFLAGS) -c -o $@ $<
+
+op_fixmap.o: op_fixmap.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 op_syscalls.o: op_syscalls.c
