--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -27,6 +27,12 @@ oprofile \- a sytem-wide profiler
 ]
 [ samples-files-directory ]
 .br
+.B op_merge
+[
+.I options
+]
+[ samples-filenames or binary-filename]
+.br
 .B op_help
 [ event-name ]
 .br
@@ -291,6 +297,17 @@ Show the details for each shared lib which belongs to one application. This opti
 sort output by increasing count of samples rather by decreasing count of samples
 .TP
 .br
+.B op_merge options
+.br
+.TP
+.BI "--use-counter " counter_nr ", -c "counter_nr
+which counter to use for selecting filenames purposes
+.TP
+.br
+.BI "--base-dir " directory_name ", -b "directory_name
+where are located samples files. Default is /var/opd/samples
+.TP
+.br
 .B oprof_convert filename [filenames]
 The oprof_convert utility is only needed when upgrading the profiler version. Further details
 can be found in the HTML documentation.
@@ -327,6 +344,9 @@ or by using :
 .PP
 .B op_time
 utility can be usefull to get an overall of all profiled applications.
+.PP
+.B op_merge
+utility can be usefull to merge samples files which belongs to the same binary image
 .PP
 .SH ENVIRONMENT
 No environment variables are recognised by oprofile.
