pp: implement sowhin symbols for optime - dae: john I fix a bug from your last commit can you review the issue ?

--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -293,6 +293,10 @@ which counter to use for sorting purposes
 Show the details for each shared lib which belongs to one application. This option is usefull only if you have profiled with --separate-samples option
 .TP
 .br
+.BI "--list-symbols -l"
+Show details for each symbols in each profiled files
+.TP
+.br
 .BI "--reverse -r"
 sort output by increasing count of samples rather by decreasing count of samples
 .TP
