--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.16 2002/01/27 21:28:24 phil_e Exp $
+# $Id: Makefile.in,v 1.17 2002/01/27 21:55:07 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -7,7 +7,7 @@ MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 # NO_MODULE_VERSION expand to __NO_VERSION__ in this case, this work
 # because only one module is compiled with BKCFLAGS. If you compile more
 # than one module with BKCFLAGS you break 2.2 compatibility. FIXME another way?
-BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing -Werror
+BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
 KCFLAGS := $(BKCFLAGS) -march=i686 @NO_MODULE_VERSION@
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional -I@KINC@
 
