--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.18 2002/02/08 05:27:20 phil_e Exp $
+# $Id: Makefile.in,v 1.19 2002/02/12 21:26:54 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -8,7 +8,7 @@ MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 # because only one module is compiled with BKCFLAGS. If you compile more
 # than one module with BKCFLAGS you break 2.2 compatibility. FIXME another way?
 BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
-KCFLAGS := $(BKCFLAGS) -march=i686 @NO_MODULE_VERSION@
+KCFLAGS := $(BKCFLAGS) -mcpu=i686 @NO_MODULE_VERSION@
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional -I@KINC@
 
 .PHONY: all install clean uninstall
