pp: --output-format - implement columed output

--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -210,12 +210,16 @@ exclude list of comma separated symbol
 .TP
 .BI "--base-dir " dir_name ", -b "dirname
 base directory of profile daemon
-.PP
 .br
+.TP
 .BI "--show-shared-libs -k"
 Show the details for each shared lib which belongs to one application. This option is useful only if you have profiled with --separate-samples option and you specify on the oprofpp command line either --list-symbols or --list-all-symbols-details.
-.TP
 .br
+.TP
+.BI "--output-format " vsSpPnlLiIh ", -t " vsSpPnlLiIh
+Specify the output format where a single format char is a field intended for: 'v' vma, 's' nr samples, 'S' nr cumulated samples, 'p' percent samples, 'P' cumulated percent samples, 'n' symbol name, 'l' source file name and line nr, 'L' ditto as 'l' but with basename of source file name, 'i' image name, 'I' ditto as 'i' but with base name of image name and 'h' for the header itself. This option is available only with --list-symbols
+.br
+.TP
 .B op_to_source options
 .br
 .TP
@@ -303,6 +307,10 @@ demangle GNU C++ symbol names
 .TP
 .BI "--show-image-name -n"
 show the image name when specifying --list-symbols
+.br
+.TP
+.BI "--output-format " vsSpPnlLiIh ", -t " vsSpPnlLiIh
+Specify the output format where a single format char is a field intended for: 'v' vma, 's' nr samples, 'S' nr cumulated samples, 'p' percent samples, 'P' cumulated percent samples, 'n' symbol name, 'l' source file name and line nr, 'L' ditto as 'l' but with basename of source file name, 'i' image name, 'I' ditto as 'i' but with base name of image name and 'h' for the header itself. This option is available only with --list-symbols
 .br
 .TP
 .BI "--reverse -r"
