--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -1,7 +1,7 @@
 # we would like to use -pedantic, but that causes throw() vs. no specification problems
 # with libiberty and string.h
 CXXFLAGS=@CXXFLAGS@ -Wall -W -Wunused -Wmissing-prototypes
-CFLAGS=-pedantic -Wall -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
+CFLAGS=-Wall -pipe -Wstrict-prototypes -Wunused -W -Wshadow -Wmissing-prototypes -Winline @CFLAGS@
 
 .PHONY: all clean install
 
