--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.47 2002/01/10 17:46:55 movement Exp $
+# $Id: Makefile.in,v 1.48 2002/03/09 00:48:44 phil_e Exp $
 
 .PHONY: all install clean distclean maintainerclean uninstall tags
 
@@ -11,6 +11,7 @@ all:
 	$(MAKE) -C dae
 	$(MAKE) -C pp
 	$(MAKE) -C gui
+	$(MAKE) -C oprof_report
 	$(MAKE) -C doc
 
 install: install.kernel install.user
@@ -24,6 +25,7 @@ install.user: all
 	$(MAKE) -C dae install DESTDIR=$(DESTDIR)
 	$(MAKE) -C pp install DESTDIR=$(DESTDIR)
 	$(MAKE) -C gui install DESTDIR=$(DESTDIR)
+	$(MAKE) -C oprof_report install DESTDIR=$(DESTDIR)
 	$(MAKE) -C doc install DESTDIR=$(DESTDIR)
 
 uninstall:
@@ -32,6 +34,7 @@ uninstall:
 	$(MAKE) -C dae uninstall
 	$(MAKE) -C pp uninstall
 	$(MAKE) -C gui uninstall
+	$(MAKE) -C oprof_report uninstall
 	$(MAKE) -C doc uninstall
 	@echo "Goodbye."
 
@@ -44,6 +47,7 @@ clean:
 	$(MAKE) -C pp clean
 	$(MAKE) -C doc clean
 	$(MAKE) -C gui clean
+	$(MAKE) -C oprof_report clean
 
 # doc/Makefile is deleted here but should be deleted in distclean.
 # When the dist target works move it as action of distclean.
@@ -51,7 +55,7 @@ maintainerclean: distclean
 	rm -f configure doc/Makefile aclocal.m4 config.h.in
 
 distclean: clean
-	rm -f Makefile module/Makefile events/Makefile util/Makefile doc/oprofile.1 dae/Makefile pp/Makefile gui/Makefile gui/ui/Makefile tags config.status config.log config.cache version.h Rules.make config.h
+	rm -f Makefile module/Makefile events/Makefile util/Makefile doc/oprofile.1 dae/Makefile pp/Makefile oprof_report/Makefile oprof_report/ui/Makefile gui/Makefile gui/ui/Makefile tags config.status config.log config.cache version.h Rules.make config.h
 
 tags:
 	ctags -R
