--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.15 2002/04/03 17:50:06 movement Exp $
+# $Id: Makefile.in,v 1.16 2002/04/04 02:16:52 phil_e Exp $
 
 RM=rm
 CP=cp
@@ -21,7 +21,7 @@ all: oprofile.html
 
 oprofile.html: oprofile.xml
 	$(XSLTPROC) $(STYLESHEET) $< > $@
- 
+
 install: all
 	-$(MKDIR_P) $(MANDIR)
 	cp oprofile.1 $(MANDIR)/oprofile.1
@@ -31,7 +31,7 @@ install: all
 	done
 	@echo "Installing html doc in $(DOCDIR)"
 	@$(MKDIR_P) $(DOCDIR)
-	@cp -R html/* $(DOCDIR)
+	@cp -R *.html $(DOCDIR)
 
 uninstall:
 	rm -f $(MANDIR)/oprofile.1
