--- a/oprof_report/Makefile.in
+++ b/oprof_report/Makefile.in
@@ -35,7 +35,7 @@ OP_REPORT_UI_OBJS=ui/oprof_report.base.o ui/oprof_report.base.moc.o
 OP_REPORT_OBJS=oprof_report.o oprof_report.moc.o oprof_report_main.o \
  oprofpp_view.o hotspot_view.o ../events/op_events.o \
  ../events/op_events_desc.o ../dae/opd_util.o ../util/string_manip.o \
- ../util/file_manip.o ../util/misc.o ../pp/oprofpp_util.o ../pp/opf_container.o
+ ../util/file_manip.o ../util/misc.o ../pp/oprofpp_util.o ../pp/opf_container.o ../pp/demangle_symbol.o
 
 # We do not put $(OP_REPORT_UI_OBJS) as dependency of oprof_report (make don't
 # know how to rebuild it at this point) but it works due to side effect between
