--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.16 2002/04/04 02:16:52 phil_e Exp $
+# $Id: Makefile.in,v 1.17 2002/05/04 04:04:34 movement Exp $
 
 RM=rm
 CP=cp
@@ -10,9 +10,6 @@ LN_SF=ln -sf
 MKDIR=mkdir
 MKDIR_P=mkdir -p
 XSLTPROC=xsltproc
-# You can over-ride this with a locally installed docbook.xsl
-# (see packages at http://docbook.sf.net)
-STYLESHEET=http://docbook.sourceforge.net/release/xsl/current/xhtml/docbook.xsl
 LINK_LIST=oprofiled.1 op_start.1 op_stop.1 op_help.1 oprofpp.1 op_time.1 op_to_source.1 op_merge.1
 
 .PHONY: all clean install uninstall
@@ -20,7 +17,10 @@ LINK_LIST=oprofiled.1 op_start.1 op_stop.1 op_help.1 oprofpp.1 op_time.1 op_to_s
 all: oprofile.html
 
 oprofile.html: oprofile.xml
-	$(XSLTPROC) $(STYLESHEET) $< > $@
+	$(XSLTPROC) xsl/xhtml.xsl $< > $@
+
+chunk: oprofile.xml
+	$(XSLTPROC) xsl/xhtml-chunk.xsl $<
 
 install: all
 	-$(MKDIR_P) $(MANDIR)
