--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.80 2002/04/27 20:01:22 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.81 2002/05/04 04:09:57 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./op_user.h)
 
@@ -18,7 +18,7 @@ AC_CONFIG_HEADER(config.h)
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 PACKAGE=oprofile
-VERSION=0.2cvs
+VERSION=0.2
 
 dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
